--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
