--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-tailwindcss-datepicker": "^1.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
