--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^1.0.6",
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-tailwindcss-datepicker": "^1.6.1",
     "react-toastify": "^9.1.3"
   },
