--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
