--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
-version: '3.8'
+version: "3.8"
 services:
   backend:
     container_name: hotels_backend
     restart: always
     links:
       - db
-    build: 
+    build:
       context: ./backend
     ports:
       - 8080:8080
@@ -18,7 +18,7 @@ services:
     container_name: hotels_frontend
     links:
       - backend
-    build: 
+    build:
       context: ./frontend
     ports:
       - 3000:3000
