--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.2",
     "react-tailwindcss-datepicker": "^1.6.1",
     "react-toastify": "^9.1.3"
