docker config prod, frontend details, setActiveBooking

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,15 @@
-MYSQL_DB_NAME=hotels_booking
-MYSQL_DB_USER=root
-MYSQL_DB_PASS=
-MYSQL_DB_HOST=localhost
-MYSQL_DB_PORT=3306
-
-# Para docker:
 # MYSQL_DB_NAME=hotels_booking
 # MYSQL_DB_USER=root
-# MYSQL_DB_PASS=root
-# MYSQL_DB_HOST=db
+# MYSQL_DB_PASS=
+# MYSQL_DB_HOST=localhost
 # MYSQL_DB_PORT=3306
+
+# Para docker:
+MYSQL_DB_NAME=hotels_booking
+MYSQL_DB_USER=root
+MYSQL_DB_PASS=root
+MYSQL_DB_HOST=db
+MYSQL_DB_PORT=3306
 
 PORT=8080
 CLIENT_ORIGIN=http://localhost:3000
