--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,10 @@ WORKDIR /app
 
 COPY package.json package-lock.json ./
 RUN  npm install
-
+COPY .env.docker ./.env
 COPY . .
-RUN npm run build
+# RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["npm","run","dev"]
