--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
       - 3000:3000
     volumes:
       - node_modules:/app/node_modules
+      - public:/app/public
+      - image_files:/app/public/images/hotels
 
   db:
     image: mysql
@@ -41,3 +43,5 @@ volumes:
   dbdata:
   go_modules:
   node_modules:
+  image_files:
+  public:
