--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,8 +5,8 @@ COPY package.json package-lock.json ./
 RUN  npm install
 COPY .env.docker ./.env
 COPY . .
-# RUN npm run build
+RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm","run","dev"]
+CMD ["npm","run","start"]
