configured env variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,12 @@
-# MYSQL_DB_NAME=hotels_booking
-# MYSQL_DB_USER=root
-# MYSQL_DB_PASS=
-# MYSQL_DB_HOST=localhost
-# MYSQL_DB_PORT=3306
-
-# Para docker:
 MYSQL_DB_NAME=hotels_booking
 MYSQL_DB_USER=root
-MYSQL_DB_PASS=root
-MYSQL_DB_HOST=db
+MYSQL_DB_PASS=
+MYSQL_DB_HOST=localhost
 MYSQL_DB_PORT=3306
 
 PORT=8080
 CLIENT_ORIGIN=http://localhost:3000
+CLIENT_IP=http://172.19.0.2:3000
 
 EMAIL_FROM=
 SMTP_HOST=
