--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -6,6 +6,7 @@ MYSQL_DB_PORT=3306
 
 PORT=8080
 CLIENT_ORIGIN=http://localhost:3000
+CLIENT_IP=http://172.19.0.2:3000
 
 EMAIL_FROM="Test Email <testing@itvirtuous.com>"
 SMTP_HOST=mail.itvirtuous.com
