fixed env variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,7 @@ MYSQL_DB_PORT=3306
 
 PORT=8080
 CLIENT_ORIGIN=http://localhost:3000
-CLIENT_IP=http://172.19.0.2:3000
+CLIENT_URL=http://frontend:3000
 
 EMAIL_FROM=
 SMTP_HOST=
