--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_URL_API='http://localhost:8080'
-NEXT_PUBLIC_IP_API='http://localhost:8080'
+NEXT_PUBLIC_URL_API_CLIENT=http://localhost:8080
 
 NEXT_PUBLIC_DOMAIN_API=localhost
